@@ -1,3 +1,5 @@
+2006/3/4 -- released version 20060304_trunk
+
 2006/3/3 -- released version 20060303_trunk
 
 2006/3/2 -- released version 20060302_trunk
